--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
+/* SEARCH BAR */
+#movie-search-bar{
+  width: 60%;
+  font-weight: 200;
+  padding: 5%;
+  border: block;
+  border-radius: 600px;
+  margin: 3% 0%;
+  transition: border 100ms ease-in-out;
+}
