--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@ body {
 }
 
 
+
+
 /* PAGINATION BUTTONS */
 /* button.pagination-button {
   font-size: 1em;
@@ -88,6 +90,8 @@ img.movie-thumbnail {
 }
 
 /* NOMINATE BUTTONS */
-button.nominate-button {
+button.nominate-btn, button.remove-nominee-btn {
   margin:0 1em 0em 1em;
+  border-radius: 30px;
 }
+
