add Roboto font and close nominationFullBanner when close icon is clicked

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* ---------- FONTS ---------- */
 /* Roboto */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 /* Capitalized and Bold Font -  Bowlby One SC */
 @import url('https://fonts.googleapis.com/css2?family=Bowlby+One+SC&display=swap');
 /* Material-UI Font Icons */
