--- a/src/App.css
+++ b/src/App.css
@@ -49,23 +49,25 @@ body {
 .App-header {
   background-color: #040404;
   font-family: 'Broadway3D', sans-serif;
-  min-height: 15vh;
+  min-height: 20vh;
   display: flex;
+  padding-top: 0.1em;
   /* flex-direction: column; */
   align-items: center;
   justify-content: center;
-  font-size: 12vmin;
+  font-size: 10vw;
   color: white;
 }
 
 span.App-header {
+  margin-top: 3%;
   display: inline;
 }
 img#logo-img{
   display: inline;
   /* float: left; */
-  margin-right: 2%;
-  height: 10vh;
+  margin: 0 2% 2% 0;
+  height: 6vmax;
 }
 
 /* ---------- SEARCH BAR ---------- */
