--- a/src/App.css
+++ b/src/App.css
@@ -35,17 +35,6 @@ body {
   text-align: center;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
 .App-header {
   background-color: #040404;
   font-family: 'Broadway3D', sans-serif;
@@ -82,38 +71,11 @@ img#logo-img{
   transition: border 100ms ease-in-out;
 }
 
-
-
-
-/* PAGINATION BUTTONS */
-/* button.pagination-button {
-  font-size: 1em;
-  font-weight: 400;
-  display:inline-block;
-  padding:0.1em 0.5em;
-  border:0.1em solid #FFFFFF;
-  background-color: none;
-  margin:0 0.3em 0.3em 0.3em;
-  border-radius:0.12em;
-  box-sizing: border-box;
-  text-decoration:none;
-  font-family: 'Roboto', sans-serif;
-  color:#FFFFFF;
-  text-align: center;
-  transition: all 0.2s;
+/* ---------- HEADERS ---------- */
+/* NOMINATION DRAWER TITLE */
+h2#nomination-list{
+  font-family: 'Broadway3D', sans-serif;
 }
-
-button.pagination-button:hover {
-  color:#000000;
-  background-color:#FFFFFF;
-}
-
-@media all and (max-width:30em) {
-  a.pagination-button{
-    display:block;
-    margin:0.4em auto;
-  }
-} */
 
 /* MOVIE CARDS */
 img.movie-thumbnail {
@@ -132,4 +94,8 @@ h6.responsive-headers{
   /* font-size: 2vmax; */
   font-size: 1.2em;
   line-height: 1.2;
+}
+
+div#nomination-drawer {
+  background-color: #383845;
 }
