--- a/src/App.css
+++ b/src/App.css
@@ -71,20 +71,19 @@ img#logo-img{
   transition: border 100ms ease-in-out;
 }
 
-/* ---------- HEADERS ---------- */
-/* NOMINATION DRAWER TITLE */
+/* ---------- NOMINATION DRAWER TITLE ----------*/
 h2#nomination-list{
   font-family: 'Broadway3D', sans-serif;
 }
 
-/* MOVIE CARDS */
+/* ----------- MOVIE CARDS ------------*/
 img.movie-thumbnail {
   height: auto;
   width: 150px;
   border-radius: 5px;
 }
 
-/* NOMINATE BUTTONS */
+/* ---------- NOMINATE BUTTONS ------------*/
 button.nominate-btn, button.remove-nominee-btn {
   margin:0 1em 0.2em 1em;
   border-radius: 30px;
@@ -93,9 +92,6 @@ button.nominate-btn, button.remove-nominee-btn {
 h6.responsive-headers{
   /* font-size: 2vmax; */
   font-size: 1.2em;
-  line-height: 1.2;
+  line-height: 0.8;
 }
 
-div#nomination-drawer {
-  background-color: #383845;
-}
