add more padding between contact and social icons

--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,8 @@ div#contact {
   font-size: 0.9em;
 }
 
-i#contact {
-  padding-right:0.3em;
+i.italics {
+  padding-right:0.5em;
 }
 
 /* ---------- Main Container ---------- */
